# StudyOpenGL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependency.cmake  imgui.ini  vcpkg.json
shader/: lighting.frag  lighting.vert  per_vertex_color.frag  per_vertex_color.vert  simple.frag  simple.vert  texture.frag  texture.vert
src/: Model.cpp  Model.h  buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  eastl_config.cpp  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
